--- a/navbar/style.css
+++ b/navbar/style.css
@@ -102,3 +102,44 @@ h1 {
 .nav2 .login-btn:hover {
   background-color: #057017;
 }
+
+.nav3 {
+  background-color: #45a2bb;
+  padding: 10px;
+}
+
+.nav3 ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav3 a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  display: block;
+}
+
+.nav3 .dropdown-content {
+  display: none;
+}
+
+.nav3 .dropdown:hover .dropdown-content {
+  display: block;
+  position: absolute;
+  background-color: #3e3e3e;
+  color: #fff;
+  min-width: 150px;
+}
+
+.nav3 .login-btn {
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
